--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typed.js": "2.0.12",
     "vue": "3.2.36",
     "vue-clipboard3": "2.0.0",
+    "vue-cookies": "^1.8.4",
     "vue-count-to": "1.0.13",
     "vue-prism-editor": "2.0.0-alpha.2",
     "vue-responsive-video-background-player": "^2.3.1",
