--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prismjs": "1.28.0",
     "typed.js": "2.0.12",
     "vue": "3.2.36",
+    "vue-async-computed": "^4.0.1",
     "vue-clipboard3": "2.0.0",
     "vue-cookies": "^1.8.4",
     "vue-count-to": "1.0.13",
